# vedic-ai

./: .gitignore  FIXES_AND_CONFIG.md  Makefile  README.md  pyproject.toml  requirements.txt  vedic-horoscope-analysis-algorithm.txt  vedic_ai.md
configs/: app.yaml  astrology.yaml  models.yaml  models_llamacpp.yaml  retrieval.yaml
data/corpus/rules/: career.yaml  health.yaml  personality.yaml  relationships.yaml  timing.yaml
data/corpus/texts/: bphs_ch15_lagna_planets.txt  bphs_ch16_planets_in_houses_2_to_6.txt  bphs_ch17_to_22_planets_houses.txt  bphs_ch23_seventh_house.txt  bphs_ch24_tenth_house.txt  bphs_ch35_yogas.txt  bphs_santhanam_vol1.txt  bphs_santhanam_vol2.txt  jaimini_sutras.txt  raman_htjh_vol1.txt  (+1 more)
data/fixtures/: sample_chart_a.json  sample_chart_b.json  sample_chart_c.json
data/golden/: eval_set_v1.json
docs/: architecture.md  corpus_policy.md  evaluation.md  migrate_ollama_to_llamacpp.md  prompting.md  scope_analysis.md  usage_guide.md
scripts/: gen_fixtures.py  train_lora.py
src/vedic_ai/: __init__.py
tests/: conftest.py
tests/e2e/: test_api_prediction.py  test_cli_prediction.py
tests/integration/: test_engine_adapter_real.py  test_fixtures.py  test_local_llm_contract.py  test_prediction_pipeline.py  test_reproducibility.py  test_retrieval_pipeline.py  test_timing_pipeline.py  test_training_data_export.py
tests/unit/: test_chunking.py  test_config.py  test_engine_normalizer.py  test_features_core.py  test_imports.py  test_metrics.py  test_prompt_builder.py  test_rule_evaluator.py  test_schema_roundtrip.py  test_timing_features.py
(+72 files in other folders)
